force-app/main/default/objects/Flow_Page_Override_Setting__mdt/Flow_Page_Override_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Flow Page Override allows you to enable a Flow on your New or Edit screens for Salesforce objects.</description>
    <label>Flow Page Override Setting</label>
    <pluralLabel>Flow Page Override Settings</pluralLabel>
</CustomObject>