force-app/main/default/objects/Flow_Page_Override_Setting__mdt/fields/Flow_Override__c.field-meta.xml
<CustomField>
    <fullName>Flow_Override__c</fullName>
    <inlineHelpText>API Name of the Flow to be used in the page override.</inlineHelpText>
    <label>Flow Override</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>