force-app/main/default/objects/Flow_Page_Override_Setting__mdt/fields/Modal__c.field-meta.xml
<CustomField>
    <fullName>Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opens the page override in a modal window rather than full-page.</inlineHelpText>
    <label>Modal</label>
    <type>Checkbox</type>
</CustomField>