force-app/main/default/objects/Flow_Page_Override_Setting__mdt/fields/Modal_Header__c.field-meta.xml
<CustomField>
    <fullName>Modal_Header__c</fullName>
    <inlineHelpText>Header text of the modal; this is required when selecting modal (e.g. New Account, Edit Account)</inlineHelpText>
    <label>Modal Header</label>
    <length>40</length>
    <type>Text</type>
</CustomField>