force-app/main/default/objects/Flow_Page_Override_Setting__mdt/fields/RecordId_Input__c.field-meta.xml
<CustomField>
    <fullName>RecordId_Input__c</fullName>
    <inlineHelpText>When overriding the Edit action, you must pass the RecordId selection into a flow using an input variable. Put the name of your input variable.</inlineHelpText>
    <label>RecordId Input</label>
    <length>18</length>
    <type>Text</type>
</CustomField>