force-app/main/default/objects/Flow_Page_Override_Setting__mdt/fields/RecordTypeId_Input__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId_Input__c</fullName>
    <inlineHelpText>When overriding the New action, you can pass the RecordTypeId selection into a flow using an input variable. Put the name of your input variable.</inlineHelpText>
    <label>RecordTypeId Input</label>
    <length>20</length>
    <type>Text</type>
</CustomField>