force-app/main/default/objects/Flow_Page_Override_Setting__mdt/validationRules/Modal_Header_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Modal_Header_Required</fullName>
    <active>true</active>
    <description>Requires that Modal Header text be entered when selecting Modal for the page display mode.</description>
    <errorConditionFormula>Modal__c &amp;&amp; ISBLANK(Modal_Header__c)</errorConditionFormula>
    <errorMessage>Modal Header is required when enabling Modal page display.</errorMessage>
</ValidationRule>