force-app/main/default/objects/Flow_Page_Override_Setting__mdt/validationRules/RecordId_Input_Not_Supported.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordId_Input_Not_Supported</fullName>
    <active>true</active>
    <description>Requires that the RecordId Input be added to an Edit page override.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Action__c, &apos;Edit&apos;)) &amp;&amp; NOT(ISBLANK(RecordId_Input__c))</errorConditionFormula>
    <errorMessage>RecordId Input is only supported for Edit page override.</errorMessage>
</ValidationRule>