force-app/main/default/objects/Flow_Page_Override_Setting__mdt/validationRules/RecordId_Input_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordId_Input_Required</fullName>
    <active>true</active>
    <description>Requires that the RecordId Input be added to an Edit page override.</description>
    <errorConditionFormula>ISPICKVAL(Action__c, &apos;Edit&apos;) &amp;&amp; ISBLANK(RecordId_Input__c)</errorConditionFormula>
    <errorMessage>RecordId Input is required for Edit page override.</errorMessage>
</ValidationRule>