force-app/main/default/objects/Flow_Page_Override_Setting__mdt/validationRules/RecordTypeId_Not_Supported.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordTypeId_Not_Supported</fullName>
    <active>true</active>
    <description>RecordTypeId Input is only supported for the New page override.</description>
    <errorConditionFormula>NOT(ISPICKVAL(Action__c, &apos;New&apos;)) &amp;&amp; NOT(ISBLANK( RecordTypeId_Input__c))</errorConditionFormula>
    <errorMessage>RecordTypeId Input is only supported for the New page override.</errorMessage>
</ValidationRule>